[tool.poetry]
name = "aiogram3-form"
version = "0.6.0"
description = "A library to create forms in aiogram3"
authors = ["TrixiS <oficialmorozov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aiogram3_form"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
aiogram = {git = "https://github.com/aiogram/aiogram", rev = "cf269e15f4a098b051f97bc68bb2e710d3d61d8a" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
